--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
 .progress-bar {
   height: 100%;
   width: 0;
-  background: linear-gradient(90deg, var(--accent-color), #00c9d1);
+  background: linear-gradient(90deg, var(--accent-color), #699496);
   transition: width 0.2s ease-out;
   border-radius: 0 3px 3px 0;
 }
